--- a/view/cardUp.html
+++ b/view/cardUp.html
@@ -141,22 +141,23 @@
     _this.$indicator.open({
           spinnerType: 'triple-bounce'
     });
-    var base64One = await photoCompress(imgFront,{})
+    var base64One = await photoCompress(imgFront,{}) // 压缩图片
     document.getElementById('pic1').src = base64One
-    imgFront=dataURLtoFile(base64One)
-    var base64Two = await photoCompress(imgBack,{})
+    imgFront=dataURLtoFile(base64One) // base64转file
+    var base64Two = await photoCompress(imgBack,{}) // 压缩图片
     document.getElementById('pic2').src = base64Two
-    imgBack=dataURLtoFile(base64Two)
-    formData.append("tel", this.phone);
+    imgBack=dataURLtoFile(base64Two) // base64转file
+    // 设置参数
+    formData.append("tel", this.phone); 
     formData.append("idcfront", imgFront);
     formData.append("idcback",imgBack);
-    upCard.call(_this,formData)
+    upCard.call(_this,formData) // 调用上传方法
   }
   // 图片上传事件
   function upCard(data) {
-    var url = window.webConfig.apiUrl + '/api/userauth/postidcard'
+    var url = window.webConfig.apiUrl + '/api/userauth/postidcard' // 上传地址
     request.post(url,data,vm).then(res => {
-      var jsonRet = JSON.parse(res.data)
+      var jsonRet = JSON.parse(res.data) // 序列化返回结果
       if (jsonRet.ReturnCode  === 'SUCCESS') {
         // 跳转页面
         window.location.href = './signWait.html'
