--- a/view/signFinish.html
+++ b/view/signFinish.html
@@ -94,7 +94,7 @@
   })
 
   function showContract(val) {
-    window.location.href='./contract.html?cid='+val
+    window.location.href='./contract.html?finish=1&&cid='+val
   }
 </script>
 </html>
