--- a/view/contract.html
+++ b/view/contract.html
@@ -12,9 +12,6 @@
   <link rel="stylesheet" href="../js/mint-ui/lib/style.css">
   <link rel="stylesheet" href="../css/login.css">
   <style>
-    body {
-      height: 100%;
-    }
 
     /* 顶部区域 */
     header.fixed {
@@ -70,7 +67,7 @@
     }
 
     .write-content {
-      margin: 10.84rem .4rem 0 .4rem
+      margin: 8.84rem .4rem 0 .4rem
     }
 
     .write-content img {
@@ -212,7 +209,7 @@
     <section v-show="step===1">
       <article>
         <header class="fixed bg-fff">
-          <a href="./signWait.html"><img src="../img/icon-back.png" alt=""></a>
+          <a @click="goBack"><img src="../img/icon-back.png" alt=""></a>
           <h1>合同详情</h1>
         </header>
         <article class="main">
@@ -227,7 +224,7 @@
       </article>
       <footer class="fixed">
         <section class="sub-content">
-          <button class="btn btn-danger" @click="faceSacn">确认签字</button>
+          <button v-if="!isFinish" class="btn btn-danger" @click="faceSacn">确认签字</button>
         </section>
       </footer>
       <!-- 签名区域 -->
@@ -331,7 +328,8 @@
       contractList: [],
       cid: '',
       CurImgBase: null,
-      step: 1
+      step: 1,
+      isFinish: 0
     },
     async mounted() {
       this.$indicator.open({
@@ -339,14 +337,15 @@
       });
       try {
         var askId = GetQueryString('cid'),
-          res = await this.getImg(askId, '0'),
+          res = await this.getImg(askId, '0'), // 获取第一页合同
           PageCount = res.PageCount
         this.cid = askId
-        this.contractList.push({
+        this.isFinish = parseInt(GetQueryString('finish'))
+        this.contractList.push({ // 合同放入列表
           src: 'data:image/jpg;base64,' + res.CurImgBase
         })
         this.$indicator.close();
-        for (let index = 1; index < PageCount; index++) {
+        for (let index = 1; index < PageCount; index++) { // 循环获取剩余页合同
           var t = await this.getImg(askId, index)
           this.contractList.push({
             src: 'data:image/jpg;base64,' + t.CurImgBase
@@ -362,7 +361,8 @@
       faceSacn: faceSacn,
       upLoadFace: upLoadFace,
       writeHandle: writeHandle,
-      reTry: reTry
+      reTry: reTry,
+      goBack:goBack
     }
   })
   // 验证成功返回签名
@@ -377,7 +377,7 @@
   function reTry() {
     this.upLoadFace()
   }
-
+  // 获取合同
   function getImg(askId, pageIndex) {
     return new Promise(function (resolve, reject) {
       var _this = this,
@@ -412,10 +412,12 @@
   })
   // 图片上传事件
   function upCard(data) {
+    // 显示加载框
     vm.$indicator.open({
       spinnerType: 'triple-bounce'
     });
     var url = window.webConfig.apiUrl + '/api/userauth/postface'
+    // 请求数据
     axios.post(url, data).then(res => {
       vm.$indicator.close();
       var jsonRet = JSON.parse(res.data)
@@ -435,7 +437,7 @@
   }
   // 手写绘制
   function lineCanvas(obj) {
-    this.linewidth = 1; // 线条粗细
+    this.linewidth = 3; // 线条粗细
     this.color = "#000";
     this.background = "#fff";
     for (var i in obj) {
@@ -477,9 +479,9 @@
     //保存图片，直接转base64
     this.saveEl.addEventListener("click",async function () {
       var imgBase64 = this.canvas.toDataURL('image/jpeg');
-      var base64 = await canvasDataURL(imgBase64,{width:69,height:30,quality:1})
-      // var imgel=document.createElement('img')
-      // imgel.src=base64
+      var base64 = await canvasDataURL(imgBase64,{width:345,height:150,quality:1})
+      var imgel=document.createElement('img')
+      imgel.src=base64
       uploadWord(base64)
     }.bind(this), false);
   };
@@ -488,9 +490,9 @@
     vm.$indicator.open({
       spinnerType: 'triple-bounce'
     });
-    var file = dataURLtoFile(base64Img)
-    url = window.webConfig.apiUrl + '/api/SignOper/dobsign',
-      formData = new FormData();
+    // var file = dataURLtoFile(base64Img)
+    var url = window.webConfig.apiUrl + '/api/SignOper/dobsign',
+        formData = new FormData();
     formData.append("tel", window.sessionStorage.getItem('tel'));
     formData.append("cid", vm.cid);
     formData.append("imghdw", base64Img.slice(base64Img.indexOf('base64,')+7));
@@ -502,6 +504,10 @@
         window.location.href = './success.html'
       } else {
         vm.$toast(getCodeToMsg(jsonRet.ReturnCode)+','+jsonRet.JsonDesc)
+        vm.$toast({
+          message: '结果：'+jsonRet.JsonDesc,
+          duration: 5000
+        });
       }
       // 其他逻辑
     }).catch(err => {
@@ -516,6 +522,7 @@
     if (elCanvas) {
       return
     }
+    // 阻止手写时窗体拖动
     document.querySelector('#write').addEventListener('touchmove', function (e) {
       e.preventDefault();
     })
@@ -523,8 +530,8 @@
       el: document.getElementById("canvas"), //绘制canvas的父级div
       clearEl: document.getElementById("clearCanvas"), //清除按钮
       saveEl: document.getElementById("saveCanvas"), //保存按钮
-      linewidth: 1, //线条粗细，选填
-      color: "black", //线条颜色，选填
+      linewidth: 3, //线条粗细，选填
+      color: "#f44336", //线条颜色，选填
       background: "#ffffff", //线条背景，选填
       paddingX: 0, // x轴偏移量
       paddingY: 0, // y轴偏移量
@@ -540,6 +547,11 @@
   // 关闭弹窗
   function closeHandle() {
     document.querySelector('.is-active').className = 'dialog'
+  }
+  // 返回
+  function  goBack(){
+    var url = this.isFinish?'./signFinish.html':'./signWait.html' // 已签返回已签列表，否则返回待签列表
+    window.location.href= url
   }
 </script>
 
