--- a/view/contract2.html
+++ b/view/contract2.html
@@ -328,7 +328,7 @@
     </section>
   </div>
 </body>
-<script src="../js/axios/dist/axios.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="../js/config/config.js"></script>
 <script src="../js/vue/vue-2.5.17.js"></script>
 <!-- 引入组件库 -->
