--- a/view/faceSacn.html
+++ b/view/faceSacn.html
@@ -177,6 +177,8 @@
   <footer>
   </footer>
 </body>
+<script src="../js/polyfill.min.js"></script>
+
 <script src="../js/common.js"></script>
 <script>
   window.onload=function(){
