--- a/view/signWait.html
+++ b/view/signWait.html
@@ -8,8 +8,8 @@
   <meta content="telephone=no,email=no" name="format-detection">
   <script src="../js/flexible/flexible.js"></script>
   <!-- less -->
-  <link rel="stylesheet/less" href="../css/style.less">
-  <script src="../js/less/less.min.js"></script>
+  <link rel="stylesheet" href="../css/style.css">
+  
   <title>合同列表</title>
   <!-- 引入样式 -->
    <link rel="stylesheet" href="../js/mint-ui/lib/style.css">
@@ -53,7 +53,8 @@
     </ul>
   </footer>
   <!-- 引入js -->
-  <script src="../js/axios/dist/axios.min.js"></script>
+  <script src="../js/polyfill.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="../js/config/config.js"></script>
   <script src="../js/vue/vue-2.5.17.js"></script>
   <!-- 引入组件库 -->
@@ -75,8 +76,10 @@
           "Status": "待签"
         }]
       },
-      mounted() {
+      mounted:function() {
         var _this = this
+        window.sessionStorage.setItem('tel', '15112663977')
+
           _this.phone = window.sessionStorage.getItem('tel')
         var url = window.webConfig.apiUrl + '/api/SignOper/getlist?id=' + _this.phone + '&status=0'
         request.get(url,_this).then(function (res) {
