--- a/docs/view/cardUp.html
+++ b/docs/view/cardUp.html
@@ -74,7 +74,7 @@
   <footer>
   </footer>
 </body>
-<script src="../js/axios/dist/axios.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="../js/config/config.js"></script>
 <script src="../js/vue/vue-2.5.17.js"></script>
 <!-- 引入组件库 -->
