--- a/view/personInfo.html
+++ b/view/personInfo.html
@@ -8,8 +8,8 @@
     <meta content="telephone=no,email=no" name="format-detection">
     <script src="../js/flexible/flexible.js"></script>
     <!-- less -->
-    <link rel="stylesheet/less" href="../css/style.less">
-    <script src="../js/less/less.min.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    
     <title>个人中心</title>
     <!-- 引入样式 -->
     <link rel="stylesheet" href="../js/mint-ui/lib/style.css">
@@ -150,7 +150,9 @@
         </ul>
     </footer>
 </body>
-<script src="../js/axios/dist/axios.min.js"></script>
+<script src="../js/polyfill.min.js"></script>
+
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="../js/config/config.js"></script>
 <script src="../js/vue/vue-2.5.17.js"></script>
 <!-- 引入组件库 -->
@@ -158,28 +160,27 @@
 <!-- 放在mint组件库后面 -->
 <script src="../js/common.js"></script>
 <script>
-var vm =new Vue({
-    el:'#app',
-    data(){
-        return {
-            phone:'- -',
-            email:'- -',
-            auth:'- -'
+    var vm = new Vue({
+        el: '#app',
+        data: {
+            phone: '- -',
+            email: '- -',
+            auth: '- -'
+        },
+        mounted:function() {
+            var _this = this
+            this.phone = window.sessionStorage.getItem('tel')
+            var url = window.webConfig.apiUrl + '/api/userauth/getinfo?id=' + this.phone
+            request.get(url, this).then(function (res) {
+                var jsonRet = JSON.parse(res.data)
+                if (jsonRet.ReturnCode === 'SUCCESS') {
+                    var t = JSON.parse(jsonRet.JsonDesc)
+                    _this.email = t.mail
+                    _this.auth = t.isVerified ? '已认证' : '未认证'
+                }
+            })
         }
-    },
-    mounted(){
-        var _this=this
-        this.phone = window.sessionStorage.getItem('tel')
-        var url =  window.webConfig.apiUrl + '/api/userauth/getinfo?id=' + this.phone
-        request.get(url,this).then(function(res){
-            var jsonRet = JSON.parse(res.data)
-            if (jsonRet.ReturnCode === 'SUCCESS') {
-                var t = JSON.parse(jsonRet.JsonDesc)
-                _this.email=t.mail
-                _this.auth = t.isVerified? '已认证':'未认证'
-            }
-        })
-    }
-})
+    })
 </script>
+
 </html>
