--- a/view/contract.html
+++ b/view/contract.html
@@ -322,6 +322,8 @@
         vm.CurImgBase = dataURLtoFile(base64)
         vm.upLoadFace()
       })
+      // vm.CurImgBase = imgs
+      // vm.upLoadFace()
       // var imgel=document.createElement('img')
       // imgel.src=base64
     })
@@ -361,7 +363,7 @@
           }) // 获取第一页合同
       } catch (error) {
         this.$indicator.close();
-        this.$toast(getCodeToMsg(error))
+        this.$toast(error)
       }
     },
     methods: {
@@ -443,7 +445,8 @@
       // 其他逻辑
     }).catch(function(err){
       vm.$indicator.close();
-      document.querySelectorAll('.dialog')[1].className = 'dialog is-active'
+      vm.$toast('错误:'+err)
+      // document.querySelectorAll('.dialog')[1].className = 'dialog is-active'
     })
   }
   // 手写绘制
