--- a/view/cardUp.html
+++ b/view/cardUp.html
@@ -8,8 +8,8 @@
   <meta content="telephone=no,email=no" name="format-detection">
   <script src="../js/flexible/flexible.js"></script>
   <title>身份验证</title>
-   <!-- 引入样式 -->
-    <link rel="stylesheet" href="../js/mint-ui/lib/style.css">
+  <!-- 引入样式 -->
+  <link rel="stylesheet" href="../js/mint-ui/lib/style.css">
   <link rel="stylesheet" href="../css/login.css">
   <style>
     /* 顶部样式 */
@@ -76,34 +76,34 @@
 </body>
 <script src="../js/polyfill.min.js"></script>
 
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="../js/axios/dist/axios.min.js"></script>
 <script src="../js/config/config.js"></script>
 <script src="../js/vue/vue-2.5.17.js"></script>
 <!-- 引入组件库 -->
 <script src="../js/mint-ui/lib/index.js"></script>
- <!-- 放在mint组件库后面 -->
- <script src="../js/common.js"></script>
+<!-- 放在mint组件库后面 -->
+<script src="../js/common.js"></script>
 <script>
   var vm = new Vue({
     el: '#app',
     data: {
-        phone: '',
-        imgfront: '',
-        imgback: ''
+      phone: '',
+      imgfront: '',
+      imgback: ''
     },
-    mounted: function() {
+    mounted: function () {
       var _this = this
       _this.phone = window.sessionStorage.getItem('tel')
-      bindImgChange('img1', function (e) {
+      bindImgChange('img1', function (e, file) {
 
         document.getElementById('pic1').src = e
-        var imgs = e.slice(e.indexOf('base64,') + 7)
         // 下面逻辑处理
+        _this.imgfront = file
       })
-      bindImgChange('img2', function (e) {
+      bindImgChange('img2', function (e, file) {
         document.getElementById('pic2').src = e
-        var imgs = e.slice(e.indexOf('base64,') + 7)
         // 下面逻辑处理
+        _this.imgback = file
       })
     },
     methods: {
@@ -126,55 +126,62 @@
   //   })
   // }
   function submit() {
-    var _this = this
-        formData = new FormData(),
-        imgFront = document.getElementById('img1').files[0],
-        imgBack = document.getElementById('img2').files[0]
-    if(!imgFront){
-      _this.$toast('请上传身份证正面照')
-      return
+    try {
+      var _this = this
+      formData = new FormData(),
+        imgFront = this.imgfront,
+        imgBack = this.imgback
+      if (!imgFront) {
+        _this.$toast('请上传身份证正面照')
+        return
+      }
+      if (!imgBack) {
+        _this.$toast('请上传身份证背面照')
+        return
+      }
+      _this.$indicator.open({
+        spinnerType: 'triple-bounce'
+      });
+      // 压缩图片
+      photoCompress(imgFront, {}, function (base64One) {
+        document.getElementById('pic1').src = base64One
+        imgFront = base64One.slice(base64One.indexOf('base64,')+7)
+        photoCompress(imgBack, {}, function (base64Two) {
+          document.getElementById('pic2').src = base64Two
+          imgBack=base64Two.slice(base64Two.indexOf('base64,')+7)
+          // 设置参数
+          formData.append("tel", _this.phone);
+          formData.append("idcfront", imgFront);
+          formData.append("idcback", imgBack);
+          upCard.call(_this, formData) // 调用上传方法
+        })
+      })
+      // 设置参数
+      // formData.append("tel", this.phone);
+      // formData.append("idcfront", imgFront);
+      // formData.append("idcback", imgBack);
+      // upCard.call(_this, formData) // 调用上传方法
+    } catch (error) {
+      _this.$toast('出错:' + error)
     }
-    if(!imgBack){
-      _this.$toast('请上传身份证背面照')
-      return
-    }
-    _this.$indicator.open({
-          spinnerType: 'triple-bounce'
-    });
-    // 压缩图片
-    // photoCompress(imgFront,{},function(base64One){
-    //   document.getElementById('pic1').src = base64One
-    //   imgFront=dataURLtoFile(base64One) // base64转file
-    //   photoCompress(imgBack,{},function(base64Two){
-    //     document.getElementById('pic2').src = base64Two
-    //     // 设置参数
-    //     formData.append("tel", this.phone); 
-    //     formData.append("idcfront", imgFront);
-    //     formData.append("idcback",imgBack);
-    //     upCard.call(_this,formData) // 调用上传方法
-    //   })
-    // })
-    // 设置参数
-    formData.append("tel", this.phone); 
-        formData.append("idcfront", imgFront);
-        formData.append("idcback",imgBack);
-        upCard.call(_this,formData) // 调用上传方法
   }
   // 图片上传事件
   function upCard(data) {
-    var url = window.webConfig.apiUrl + '/api/userauth/postidcard', // 上传地址
-    _this =this
-    request.post(url,data,vm).then(function(res){
+    var url = window.webConfig.apiUrl + '/api/userauth/bpostidcard', // 上传地址
+      _this = this
+    request.post(url, data, vm).then(function (res) {
       var jsonRet = JSON.parse(res.data) // 序列化返回结果
-      if (jsonRet.ReturnCode  === 'SUCCESS') {
+      if (jsonRet.ReturnCode === 'SUCCESS') {
         // 跳转页面
+        _this.$toast('认证成功！');
         window.location.href = './signWait.html'
-      }else {
+        window.event.returnValue = false;
+      } else {
         _this.$toast(getCodeToMsg(jsonRet.ReturnCode))
       }
       // 其他逻辑
-    }).catch(function(err){
-      _this.$toast('系统错误！')
+    }).catch(function (err) {
+      _this.$toast('系统错误！' + err)
     })
   }
 </script>
