--- a/view/signWait.html
+++ b/view/signWait.html
@@ -54,7 +54,7 @@
   </footer>
   <!-- 引入js -->
   <script src="../js/polyfill.min.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="../js/axios/dist/axios.min.js"></script>
   <script src="../js/config/config.js"></script>
   <script src="../js/vue/vue-2.5.17.js"></script>
   <!-- 引入组件库 -->
